# terraform-practice

./: .gitignore  main.tf  variables.tf
doc_id_extractor/: .gitignore  README.md  package.sh  pyproject.toml
doc_id_extractor/src/doc_id_extractor/: __init__.py  handler.py
lambda/: Dockerfile  README.md  pyproject.toml
lambda/src/lambda/: __init__.py  handler.py
terraform-basics-backend-setup/: main.tf
