[project]
name = "doc-id-extractor"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "blackjack", email = "kurawata414@gmail.com" }
]
dependencies = [
    "boto3>=1.35.71",
    "pip>=24.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/doc_id_extractor"]
